--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,23 @@
             <artifactId>selenium-java</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
+    <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/java/stories</directory>
+                <includes>
+                    <include>**/*.story</include>
+                </includes>
+            </testResource>
+        </testResources>
+    </build>
 
 
 </project>
